--- a/style.css
+++ b/style.css
@@ -22,44 +22,36 @@ body {
     background-color: white;
     height: 500px;
     width: 300px;
-border-radius: 10px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
+    border-radius: 10px;
+
     border-width: 220px;
     border-color: black;
 }
 
 .login-parent h1 {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin: 30px 0;
+    text-align: center;
 }
 
 .login-parent button {
     font-family: 'Jua', sans-serif;
     border-radius: 10px;
-background-color: #7766FF ;
+    background-color: #7766FF;
 }
 
 .credentials {
-    /* display: inline-flex;
-    flex-direction: column; */
     gap: 15px;
-   margin-left: auto;
-   margin-right: auto;
     margin-bottom: 50px;
-width: 10vw ;
-position: relative;
-
+    width: 10vw;
 }
 
 .credential {
-max-width: 200px;
+    max-width: 200px;
 
 }
 
 .credential h3 {
 
-text-align: left;
+    text-align: left;
 
 }
