--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ body {
 }
 
 .login-parent {
-    background-color: white;
+    background-color: #D9D9D9;
     height: 500px;
     width: 300px;
     border-radius: 10px;
-
+    text-align: center;
     border-width: 220px;
     border-color: black;
 }
@@ -40,18 +40,22 @@ body {
 }
 
 .credentials {
-    gap: 15px;
-    margin-bottom: 50px;
-    width: 10vw;
+    text-align: center;
 }
-
 .credential {
-    max-width: 200px;
-
+    width: 200px;
+text-align: center;
+margin: 0 auto;
 }
 
 .credential h3 {
 
     text-align: left;
 
+}
+
+.credential input {
+    border-radius: 10px;
+width: 200px;
+background-color:  #D9D9D9;
 }
