--- a/style.css
+++ b/style.css
@@ -12,24 +12,23 @@ body {
     background: linear-gradient(180deg, #ED5E5E 4.17%, #E67A7A 50%, #FF9393 100%);
     width: 100vw;
     height: 100vh;
-
-    display: flex;
+ display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .login-parent {
-    background-color: #D9D9D9;
+    background-color: #ffffff;
     height: 500px;
     width: 300px;
     border-radius: 10px;
     text-align: center;
-    border-width: 220px;
-    border-color: black;
+    border-width: 20px;
+    border: solid black 1px;
 }
 
 .login-parent h1 {
-    margin: 30px 0;
+    margin: 50px 0;
     text-align: center;
 }
 
@@ -37,16 +36,20 @@ body {
     font-family: 'Jua', sans-serif;
     border-radius: 10px;
     background-color: #7766FF;
+    width: 200px;
+    height: 28px;
+    font-size: 20px;
 }
 
 .credentials {
     text-align: center;
+    margin-bottom: 80px;
 }
 
 .credential {
     width: 200px;
     text-align: center;
-    margin: 0 auto;
+    margin: 0 auto 20px auto;
 }
 
 .credential h3 {
@@ -59,4 +62,5 @@ body {
     border-radius: 10px;
     width: 200px;
     background-color: #D9D9D9;
+    text-indent: 5px;
 }
